--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
 						<div class="content">
-							<h3>ATVing/Quadding</h3>
+							<h3>ATVing/Quading</h3>
 							<p>During the summer when the snow melts, its time to break out the Quads! I usually take at least a weekend per month in the summer </ br>
                             to do some riding out at the Oregon coast dunes.</p>
 						</div>
