Updated October 3rd, 2020

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
 					<h2>Computer Science Undergradute</h2>
-					<h3>University of Oregon</h3>
+					<h3>Oregon State University</h3>
 				</header>
 				<ul class="icons labeled">
-                    <li><a href="mailto:kendellc@uoregon.edu" class="icon label fa-envelope"><span class="label">kendellc@uoregon.edu</span></a></li>
-                    <li><a href="https://joinhandshake.com" class="icon label fa-handshake"><span class="label">kendellc@uoregon.edu</span></a></li>
+                    <li><a href="mailto:crockerk@oregonstate.edu" class="icon label fa-envelope"><span class="label">crockerk@oregonstate.edu</span></a></li>
+                    <!--<li><a href="https://joinhandshake.com" class="icon label fa-handshake"><span class="label">kendellc@uoregon.edu</span></a></li>  -->
                     <li><a href="https://www.linkedin.com/in/kendell-crocker-b2144519b" class="icon brands fa-linkedin-square"><span class="label">Kendell Crocker</span></a></li>
                 </ul>
                 <ul class="icons labeled">
@@ -478,7 +478,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		<!-- Footer -->
 			<footer id="footer">
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+				<p> Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
 
 		<!-- Scripts -->
