Updated October 3rd, 2020 Part 2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</header>
 				<ul class="icons labeled">
                     <li><a href="mailto:crockerk@oregonstate.edu" class="icon label fa-envelope"><span class="label">crockerk@oregonstate.edu</span></a></li>
-                    <!--<li><a href="https://joinhandshake.com" class="icon label fa-handshake"><span class="label">kendellc@uoregon.edu</span></a></li>  -->
+                    <li><a href="https://joinhandshake.com" class="icon label fa-handshake"><span class="label">crockerk@oregonstate.edu</span></a></li>
                     <li><a href="https://www.linkedin.com/in/kendell-crocker-b2144519b" class="icon brands fa-linkedin-square"><span class="label">Kendell Crocker</span></a></li>
                 </ul>
                 <ul class="icons labeled">
