Fixed Continuant Job Title

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<section>
 					<!-- Job 2 -->
                     <header>
-						<h4>Jerry's Home Improvement Center</h4>
+						<h4>Continuant, Inc.</h4>
 						<p>Sales Associate, August 2015 - October 2020</p>
 					</header>                        
                     <div class="col-6 col-12-medium">
