Fixed graduate typo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<!-- One - Bio and contact -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Computer Science Undergradute</h2>
+					<h2>Computer Science Undergraduate</h2>
 					<h3>Oregon State University</h3>
 				</header>
 				<ul class="icons labeled">
