CS 271 Project test part 2

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!--NOTE: The width IS important!-->
     <!--Slide 1-->
     <div class="Slide">
-        <a href="https://en.wikipedia.org/wiki/Oregon_Dunes_National_Recreation_Area"><img src='https://github.com/kcskier/kcskier.github.io/blob/master/images/slide1.jpg' style="width:100%"></a>
+        <a href="https://en.wikipedia.org/wiki/Oregon_Dunes_National_Recreation_Area"><img src='images/slide1.jpg' style="width:100%"></a>
     </div>
 
     <!--Slide 2-->
