--- a/index.html
+++ b/index.html
@@ -92,16 +92,30 @@
 						<h2>Work Experience</h2>
 					</header>
 					
-					<!-- Job 4 -->
+					<!-- Job 5 -->
                     <header>
 						<h4>Life Bible Church</h4>
-						<p>Technical Support Specialist, November 2020 - Current</p>
+						<p>Assistant to the IT Director, November 2020 - Current</p>
 					</header>                        
                     <div class="col-6 col-12-medium">
                         <ul>
 							<li>Setup and manage equipment for performaces, as well as backend networking infrastructure</li>
 							<li>Provide support and maintain equipment and devices</li>
 							<li>Oversee regular weekend services, as well as conferences and other performace events</li>
+						</ul>
+                    </div>
+					<!-- End Job 5 -->
+
+					<!-- Job 4 -->
+                    <header>
+						<h4>Life Bible Church</h4>
+						<p>Facilitices Maintenance, November 2020 - Current</p>
+					</header>                        
+                    <div class="col-6 col-12-medium">
+                        <ul>
+							<li>Vaccum Floors to maintain a lack of glitter</li>
+							<li>Dissifect an obscene number of doorknobs</li>
+							<li>Use wet floor signs to prevent people from slipping</li>
 						</ul>
                     </div>
 					<!-- End Job 4 -->
