--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="col-6 col-12-medium">
                         <ul>
 							<li>Vaccum Floors to maintain a lack of glitter</li>
-							<li>Dissifect an obscene number of doorknobs</li>
+							<li>Dissinfect an obscene number of doorknobs</li>
 							<li>Use wet floor signs to prevent people from slipping</li>
 						</ul>
                     </div>
