Temporarily removed a section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					<!-- End Job 5 -->
 
 					<!-- Job 4 -->
-                    <header>
+                    <!--<header>
 						<h4>Life Bible Church</h4>
 						<p>Facilitices Maintenance, November 2020 - Current</p>
 					</header>                        
@@ -117,7 +117,7 @@
 							<li>Dissinfect an obscene number of doorknobs</li>
 							<li>Use wet floor signs to prevent people from slipping</li>
 						</ul>
-                    </div>
+                    </div>-->
 					<!-- End Job 4 -->
 					
 					<!-- Job 3 -->
