--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<!-- Job 5 -->
                     <header>
 						<h4>Life Bible Church</h4>
-						<p>Assistant to the IT Director, November 2020 - Current</p>
+						<p>Assistant IT Director, November 2020 - Current</p>
 					</header>                        
                     <div class="col-6 col-12-medium">
                         <ul>
