added wireguard note

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 			<header>
 				<div class="col-6 col-12-medium">
 					<ul>
+						<li>Experience with virtual private network solutions, such as OpenVPN, IPSec, and Wireguard</li>
 						<li>Familiar with a variety of Operating systems, including MacOS, Windows, Linux, and FreeBSD
 						</li>
 						<li>Setup servers for file storage, file archival, and active directory</li>
