Updated CP Certs

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
 				<ul>
 					<li>
 						<h4><a href="https://www.getdante.com/resources/training/dante-certification-program/"
-								target="_blank">Dante Certification - Level 3</a></h4>
+								target="_blank">Dante by Audinate Certification - Level 3</a></h4>
 						<p>Audinate - May 2023</p>
 					</li>
 					<li>
-						<h4><a href="https://cradlepoint.com/#" target="_blank">Cradlepoint Certified Network Professional (CPCNP)</a></h4>
-						<p>May 2024, Cradlepoint by Ericsson</p>
+						<h4><a href="https://cradlepoint.com/#" target="_blank">Cradlepoint Certified Network Expert (CPCNE)</a></h4>
+						<p>October 2024, Cradlepoint by Ericsson</p>
 					</li>
 				</ul>
 			</header>
