Updated Hobbies Section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 						<p>Audinate - May 2023</p>
 					</li>
 					<li>
-						<h4><a href="https://cradlepoint.com/#" target="_blank">Cradlepoint Certified Network Expert (CPCNE)</a></h4>
+						<h4><a href="https://cradlepoint.com/#" target="_blank">Cradlepoint Certified Network Expert
+								(CPCNE)</a></h4>
 						<p>October 2024, Cradlepoint by Ericsson</p>
 					</li>
 				</ul>
@@ -202,7 +203,8 @@
 			<header>
 				<div class="col-6 col-12-medium">
 					<ul>
-						<li>Experience with virtual private network solutions, such as OpenVPN, IPSec, and Wireguard</li>
+						<li>Experience with virtual private network solutions, such as OpenVPN, IPSec, and Wireguard
+						</li>
 						<li>Familiar with a variety of Operating systems, including MacOS, Windows, Linux, and FreeBSD
 						</li>
 						<li>Setup servers for file storage, file archival, and active directory</li>
@@ -217,37 +219,35 @@
 	<!-- Four - Hobbies-->
 	<section id="four" class="wrapper">
 		<div class="inner alt">
-			<!-- Hobby 1 -->
-			<section class="spotlight">
-				<div class="image"><img src="images/pic01.jpg" alt="" /></div>
-				<div class="content">
-					<h3>Skiing</h3>
-					<p>When I'm not working or in a class, you can find me up in the Oregon Cascades. My parents taught
-						me how to ski when I was very young, </br>
-						and now it has become my favorite pastime in the winter months.</p>
-				</div>
-			</section>
+			<header class="major">
+				<h2>Interests and Activities</h2>
+			</header>
+			<p style="border-top: none; margin-top: auto;"><span class="image left"><img src="images/pic06.jpg"
+						alt="" /></span>
+				When I was 13, I built my first computer.
+				Ever since, I have been passionate about technology and the possibilities it creates. That early
+				experience
+				of assembling components, troubleshooting issues, and finally seeing it all come to life ignited a
+				curiosity
+				that has driven me ever since. What began as a hobby evolved into a deeper exploration of hardware,
+				software,
+				and networks, eventually shaping the career path I chose.</br></br>
+				These days, in addition to building computers, I enjoy tinkering with my home lab setup, constantly
+				learning
+				and expanding my knowledge. For me, technology is more than just a profession—it’s a lifelong pursuit of
+				discovery, creativity, and innovation.
+				</br></br></br></br>
 
-			<!-- Hobby 2-->
-			<section class="spotlight">
-				<div class="image"><img src="images/pic02.jpg" alt="" /></div>
-				<div class="content">
-					<h3>ATVing/Quading</h3>
-					<p>Another activity I enjoy with my family is quading at the coastal dunes. During the summer you
-						can find me out there, probably riding on the beach or some trail back in the woods.</p>
-				</div>
-			</section>
-
-			<!-- Hobby 3 -->
-			<section class="spotlight">
-				<div class="image"><img src="images/pic03.jpg" alt="" /></div>
-				<div class="content">
-					<h3>Custom Computer Builds</h3>
-					<p>The hobby that got me into computers in the first place was building them. I built my first PC
-						when I was 13, and since then I've built </br>
-						countless custom PCs for clients to fit their needs.</p>
-				</div>
-			</section>
+				<span class="image right"><img src="images/pic01.jpg" alt="" /></span>
+				When I'm not working, often you'll find me enjoying the great outdoors in the beautiful state of Oregon.
+				Growing up, my parents often took my brother and I weekend trips to ski, snowshoe, hike, or ATV. I've
+				spent
+				countless hours exploring trails in the Oregon Cascade range, carving down ski slopes, and zipping down
+				the
+				Oregon coastal sand dunes.</br></br>
+				Even now, I love sharing these experiences with friends and family, whether it’s discovering new trails,
+				planning a weekend getaway, or simply enjoying the thrill of being outdoors together.
+			</p>
 		</div>
 	</section>
 
@@ -607,7 +607,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 		</div>
 	</section>
--->
+	-->
 
 	<!-- Footer -->
 	<footer id="footer">
