--- a/index.html
+++ b/index.html
@@ -183,17 +183,38 @@
 			</header>
 			<header>
 				<ul>
+					<!--<li>
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-801/" target="_blank">Configuring Windows Server Hybrid Advanced Services
+								(AZ-801)</a></h4>
+						<p>Expected 2025, Microsoft Corporation</p>
+					</li>-->
 					<li>
-						<h4><a href="https://www.getdante.com/resources/training/dante-certification-program/"
-								target="_blank">Dante by Audinate Certification - Level 3</a></h4>
-						<p>Audinate - May 2023</p>
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/exams/az-800/" target="_blank">Administering Windows Server Hybrid Core Infrastructure
+								(AZ-800)</a></h4>
+						<p>Expected August 2025, Microsoft Corporation</p>
+					</li>
+					<li>
+						<h4><a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-fundamentals/?practice-assessment-type=certification" target="_blank">Microsoft Certified: Azure Fundamentals
+								(AZ-900)</a></h4>
+						<p>May 2025, Microsoft Corporation</p>
+					</li>
+					<li>
+						<h4><a href="https://www.cisco.com/site/us/en/learn/training-certifications/certifications/enterprise/ccna/index.html" target="_blank">Cisco Certified Network Associate
+								(CCNA)</a></h4>
+						<p>March 2025, Cisco Systems, Inc.</p>
 					</li>
 					<li>
 						<h4><a href="https://cradlepoint.com/#" target="_blank">Cradlepoint Certified Network Expert
 								(CPCNE)</a></h4>
 						<p>October 2024, Cradlepoint by Ericsson</p>
 					</li>
+					<li>
+						<h4><a href="https://www.getdante.com/resources/training/dante-certification-program/"
+								target="_blank">Dante by Audinate Certification - Level 3</a></h4>
+						<p>Audinate - May 2023</p>
+					</li>
 				</ul>
+				
 			</header>
 
 			<!-- Related Skills -->
